mule-user-guide/v/3.8/creating-project-archetypes.adoc
= 创建项目原型
:keywords: customize, custom archetypes

Mule提供了Maven原型，您可以将其用作Mule项目的代码模板。这些模板包含一组实施说明和"todo"指针，可帮助您快速入门。 Mule项目原型将帮助您在几秒钟内生成量身定制的样板项目。有关使用Maven的更多信息，请参阅使用Maven。

按照以下说明为新项目创建模板文件，其中包括所有必需的Java样板和详细的实施说明。

[TIP]
要使用API​​Kit原型创建APIKit项目，请检查 link:/apikit/creating-an-apikit-project-with-maven[使用Maven创建APIKit项目]。

== 配置Maven

将以下内容添加到文件`settings.xml`（通常在您的Maven `$HOME/.m2`或`conf`目录中，例如`/usr/local/apache-maven/apache-maven-<version>/conf`），以便Maven允许您执行Mule插件。

*settings.xml*

[source, xml, linenums]
----
<settings>
    <pluginGroups>
        <pluginGroup>org.mule.tools</pluginGroup>
    </pluginGroups>
    ...
</settings>
----

== 使用原型

首先，打开命令shell并切换到您想要创建项目的目录。

[source, code, linenums]
----
cd yourDir
----

接下来，您将执行原型并生成代码。如果这是您第一次运行此命令，Maven将为您下载原型。

[source, code, linenums]
----
mvn mule-project-archetype:create -DartifactId=xxx -DmuleVersion=3.1.1
----

至少，你传入两个系统参数：

*  `artifactId`：项目的简称（如'myApp'）。这必须是小写字母，不能有空格，句点，连字符等。

*  `muleVersion`：您要使用的Mule项目原型的版本。这也将是用于生成的工件的默认Mule版本。
+
[NOTE]
====
*Running the archetype*

Maven默认使用原型的最新版本。这可能会导致问题，如果你想创建一个早期版本的骡子项目。在这种情况下，运行mule-project-archetype，指定插件的完整版本，如下所示：

[source, code, linenums]
----
mvn org.mule.tools:mule-project-archetype:3.1.1:create ...
----
====
+
[NOTE]
====
*artifactId*

artifactId可以包含下划线或连字符等字符。但是，插件会将名称转换为适用于Java的可用表单。例如，如果将参数指定为**-DartifactId=My#Awesome-Mule_Project**，则将在该名称的目录中创建项目，但项目名称为*MyAwesomeMuleProject*，包名称为*.myawesomemuleproject*
====

插件会询问各种问题（如下所述），然后生成文件。您也可以通过在命令行中输入所有参数，在没有用户提示的情况下使用此插件。有关可以传入的参数的完整列表，请参阅<<Command Line Options>>。

== 示例控制台输出

该插件会提示您回答有关您正在撰写的项目的几个问题。这些可能会根据您选择的选项而有所不同。输出示例如下所示。

[source, code, linenums]
----
[INFO] description:
********************************************************************************

Provide a description of what the project does:

[default:]
********************************************************************************

[INFO] muleVersion:
********************************************************************************

Which version of Mule is this module targeted at?

[default: 3.1.0]
********************************************************************************

[INFO] package:
********************************************************************************

What is the base Java package path for this project? (i.e. com/mycompany/project):

[default:]
********************************************************************************

[INFO] transports:
********************************************************************************

Which Mule transports do you want to include in this project?

(options: axis,cxf,ejb,file,ftp,http,https,imap,imaps,jdbc,
          jetty,jms,multicast,pop3,pop3s,quartz,rmi,servlet,smtp,
          smtps,servlet,ssl,tls,stdio,tcp,udp,vm,xmpp):

[default: cxf,file,http,jdbc,jms,stdio,vm]

********************************************************************************

[INFO] modules:
********************************************************************************

Which Mule modules do you want to include in this project?

(options: bulders,client,jaas,jbossts,management,ognl,pgp,scripting,
          spring-extras,sxc,xml):

[default: client,management,scripting,sxc,xml]

********************************************************************************
----

*Note*：OGNL和Sxc在Mule 3.6中被弃用，并将在Mule 4.0中被删除。另外，MuleForge不再存在。

在回答所有问题后，原型将使用您指定的项目名称创建一个目录，其中包含用Maven构建的POM文件，这是一个Mule配置文件（`src\main\resources\mule-config.xml`），其中包含传输和模块的名称空间指定并使用您指定的程序包路径创建第一个流程的占位符元素和`src\main\java`下的`package.html`文件。最后，它会在`src\test`下创建一些模板文件，以帮助您开始为项目创建单元测试。将在项目的根目录中创建一个新的`MULE-README.txt`文件，以解释创建了哪些文件。

== 问题解释

=== 提供项目内容的描述：

您应该提供关于该项目的准确描述，并提供关于您可以或不可以使用它的任何高级详细信息。该文本将用于需要项目描述的地方。

=== 这个项目针对哪个版本的Mule？

您希望用于您的项目的Mule版本。这将默认为通过命令行传入的原型版本。

=== 此项目的基本Java包路径是什么？

这应该是您项目的Java包路径，例如com / mycompany / project。请注意，您必须使用斜杠作为分隔符，而不是句点。

=== 您希望在此项目中包含哪些Mule传输？

您计划在此项目中使用的传输（例如HTTP和VM）的逗号分隔列表。这会将这些传输的命名空间添加到配置文件中。

=== 您希望在此项目中包含哪些Mule模块？

您计划在此项目中使用的模块（例如XML和脚本）的逗号分隔列表。这会将这些模块的名称空间添加到配置文件中。

== 命令行选项

默认情况下，此插件以交互模式运行，但可以使用以下选项以“无声”模式运行它：

[source, code, linenums]
----
-DinteractiveMode=false
----

以下选项可以传入：

[%header%autowidth.spread]
|===
|姓名 |示例 |默认值
|的groupId  |  - 。DgroupId = org.mule.applicationxxx  | org.mule.application <artifactId>
| {packagepath的{1}}  -  DpackagePath =组织/骡/应用 |无
| {运输{1}}  -  Dtransports = HTTP，VM  | CXF，文件，HTTP，JDBC，JMS标准输入输出，VM
| {muleVersion {1}}  -  DmuleVersion = 3.1.0  |无
| {的packageName {1}}  -  DpackageName = MYPKG  |无
|描述 |  -  Ddescription = "some text"  |无
| {模块{1}}  -  Dmodules = XML，脚本 |客户，管理，脚本，XML
|的basedir  |  -  Dbasedir = /项目/骡/工具 | <current dir>
| {包{1}}  -  Dpackage =组织/骡/应用/ MYPKG  |无
|的artifactId  |  -  DartifactId = myMuleProject  | <artifactId>
|版本 |  -  Dversion = 1.0-SNAPSHOT  | <muleVersion>
|===
